tests/vm/stackTrace.test.out
-------------------------------------------------------------------------------
Type Error:

Field ref expected type 'PtlsObject', got type 'PtlsMap'
-------------------------------------------------------------------------------

At (line 3) (column 11) in 'tests/vm/stackTrace.test'
foo(z) = z.y
          ^
At (line 2) (column 20) in 'tests/vm/stackTrace.test'
output = foo(z) |> println
                   ^
